--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(73, 70, 255) url("fone.jpg") no-repeat fixed left bottom;
+    background: rgb(73, 70, 255) url("file/fone.jpg") no-repeat fixed left bottom;
     color: azure;
    }
     
